# buffalo-ipsum

./: .gitignore  CHANGELOG.md  CLAUDE.md  INDEX.md  README.md  pyproject.toml
src/buffaloipsum/: __init__.py  __main__.py  live.py  mcp_server.py
tests/: test_buffaloipsum.py  test_live.py  test_main.py  test_mcp_server.py
