[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "buffalo-ipsum"
version = "0.1.2"
description = "Filler text generator composed entirely of the word 'buffalo'. AI native."
readme = "README.md"
requires-python = ">=3.9"
license = { text = "MIT" }
authors = [{ name = "Ken MacInnis", email = "ken.macinnis@gmail.com" }]
keywords = ["ipsum", "filler", "buffalo", "lorem"]
classifiers = [
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Text Processing",
]

[project.optional-dependencies]
live = ["anthropic>=0.40"]

[project.scripts]
buffalo-ipsum = "buffaloipsum.__main__:main"

[project.urls]
Homepage = "https://buffalo.supplies"
Repository = "https://github.com/kcm/buffalo-ipsum.git"
Issues = "https://github.com/kcm/buffalo-ipsum/issues"
Changelog = "https://github.com/kcm/buffalo-ipsum/blob/main/CHANGELOG.md"

[tool.hatch.build.targets.wheel]
packages = ["src/buffaloipsum"]
